[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "websockets>=12.0",
    "yfinance>=0.2",
    "pytz>=2024.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
